src/objects/ACCL__Segmentation_Rule_Def__c.object
<CustomObject>
    <description>Contains the available Queries and its attributes for creating Segmentation Rules.</description>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Holds the description for the segmentation rule definition.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org the segmentation rule definition belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Segmentation_Query__c</fullName>
        <description>SOQL statement with bindings for segmentation rule definition columns.</description>
        <inlineHelpText>SOQL statement with bindings for Segmentation Rule Definition Columns</inlineHelpText>
        <label>Segmentation Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__State__c</fullName>
        <description>Describes the current status of the segmentation rule definition.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Target__c</fullName>
        <description>Defines the type of the source programmatic language.</description>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Total_Columns__c</fullName>
        <description>Count of total columns.</description>
        <label>Total Columns</label>
        <summaryForeignKey>ACCL__Segmentation_Rule_Def_Column__c.ACCL__Segmentation_Rule_Def__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Use_Account_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if account hierarchy is used or not.</description>
        <label>Use Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Use_Org_Unit_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if org unit hierarchy is used or not.</description>
        <label>Use Org Unit Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <label>Segmentation Rule Definition</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>ACCL__State__c</columns>
        <columns>NAME</columns>
        <columns>ACCL__Use_Account_Hierarchy__c</columns>
        <columns>ACCL__Use_Org_Unit_Hierarchy__c</columns>
        <columns>ACCL__Segmentation_Query__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Released</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCL__Use_Account_Hierarchy__c</columns>
        <columns>ACCL__Use_Org_Unit_Hierarchy__c</columns>
        <columns>ACCL__Segmentation_Query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__State__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </filters>
        <label>Released</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Segmentation Rule Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Rule Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Delete_Columns_When_Rule_Def_is_Released</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(ACCL__Total_Columns__c) &amp;&amp; ISPICKVAL(ACCL__State__c , &apos;Released&apos;)</errorConditionFormula>
        <errorMessage>Columns can&apos;t be deleted if the Segmentation Rule Definition State is &apos;Released&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Max_Total_of_Columns</fullName>
        <active>true</active>
        <description>The maximum number of columns allowed is 15.</description>
        <errorConditionFormula>ACCL__Total_Columns__c &gt; 15</errorConditionFormula>
        <errorMessage>The maximum number of columns allowed is 15.</errorMessage>
    </validationRules>
</CustomObject>